# crate2nix_debug

./: Cargo.toml  run.sh  shell.nix
